# runtime-contracts

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  OPERATIONS.md  ORIGINS.md  PIPELINE.md  PROJECT-STATUS.md  README.md  REVIEW.md  mesh_status_mcp.py  pyproject.toml  requirements.txt  runtime-contract-check.py  runtime_contract_check.py  session-guard.sh  verify-session.sh
examples/: http_api.contract.json  mcp_server.contract.json  worker.contract.json
src/runtime_contracts/: __init__.py  __main__.py  checks.py  cli.py  config.py  mcp.py  reporting.py  scoring.py
templates/: http_api.template.json  mcp_server.template.json  mcp_server_http.template.json  worker.template.json
tests/: test_contract_check.py
